Move api project to /api folder
Reason: api's will be serve under 4641 port

--- a/docker-infra/nginx/nginx-api.conf
+++ b/docker-infra/nginx/nginx-api.conf
@@ -7,7 +7,7 @@ server {
     access_log /var/log/nginx/application.access.log;
 
 
-    root /app/public;
+    root /app/api/api/public;
     index index.php;
 
     # try to serve file directly, fallback to index.php
@@ -20,7 +20,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass api-php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
