--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
     mysql:
         image: 'mysql:8.0'
-        working_dir: /app
+        working_dir: /app/api
         volumes:
             - '.:/app'
         environment:
@@ -27,23 +27,23 @@ services:
         ports:
             - '5002:3306'
 
-    api:
+    api-server:
         depends_on:
             -   mysql
         image: 'nginx:alpine'
-        working_dir: /app
+        working_dir: /app/api
         volumes:
-            - '.:/app'
-            - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
+            - '.:/app/api'
+            - './docker-infra/nginx/nginx-api.conf:/etc/nginx/conf.d/default.conf'
         ports:
             - '4641:80'
 
-    php-fpm:
-        build: phpdocker/php-fpm
-        working_dir: /app
+    api-php-fpm:
+        build: docker-infra/php-fpm
+        working_dir: /app/api
         volumes:
-            - '.:/app'
-            - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.0/fpm/conf.d/99-overrides.ini'
-            - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.0/cli/conf.d/99-overrides.ini'
+            - '.:/app/api'
+            - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/fpm/conf.d/99-overrides.ini'
+            - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/cli/conf.d/99-overrides.ini'
         environment:
             PHP_IDE_CONFIG: "serverName=Docker"
