--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,24 @@ services:
             - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/cli/conf.d/99-overrides.ini'
         environment:
             PHP_IDE_CONFIG: "serverName=Docker"
+
+    front-server:
+        depends_on:
+            -   mysql
+        image: 'nginx:alpine'
+        working_dir: /app/front
+        volumes:
+            - '.:/app/front'
+            - './docker-infra/nginx/nginx-front.conf:/etc/nginx/conf.d/default.conf'
+        ports:
+            - '4642:80'
+
+    front-php-fpm:
+        build: docker-infra/php-fpm
+        working_dir: /app/front
+        volumes:
+            - '.:/app/front'
+            - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/fpm/conf.d/99-overrides.ini'
+            - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/cli/conf.d/99-overrides.ini'
+        environment:
+            PHP_IDE_CONFIG: "serverName=Docker"
