--- a/docker-infra/nginx/nginx-front.conf
+++ b/docker-infra/nginx/nginx-front.conf
@@ -4,9 +4,9 @@ server {
 
     client_max_body_size 108M;
 
-    access_log /var/log/nginx/application.access.log;
+    access_log /var/log/nginx/application-front.access.log;
 
-    root /app/api/api/public;
+    root /app/front/front/public;
     index index.php;
 
     # try to serve file directly, fallback to index.php
@@ -19,10 +19,10 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass api-php-fpm:9000;
+        fastcgi_pass front-php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
+        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_front_php_errors.log";
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
         include fastcgi_params;
