Add node JS & yarn globaly

--- a/docker-infra/php-fpm/Dockerfile
+++ b/docker-infra/php-fpm/Dockerfile
@@ -1,6 +1,8 @@
 FROM phpdockerio/php80-fpm:latest
 WORKDIR "/app"
 
+ENV NODE_VERSION=14.17.0
+
 RUN apt-get update; \
     apt install libpcre2-16-0 libpcre2-8-0 libpcre2-32-0 \
     apt-get -y --no-install-recommends install \
@@ -20,3 +22,9 @@ RUN apt-get update; \
 RUN composer global require --prefer-dist --no-progress --dev "squizlabs/php_codesniffer=*"
 RUN composer global require --prefer-dist --no-progress --dev phpmd/phpmd:2.10.1
 ENV PATH="/root/.config/composer/vendor/bin:${PATH}"
+
+RUN curl -L -o /tmp/nodejs.tar.gz https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}-linux-x64.tar.gz
+RUN tar xfvz /tmp/nodejs.tar.gz -C /usr/local --strip-components=1 && \
+    rm -f /tmp/nodejs.tar.gz
+
+RUN npm install yarn -g
