--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
 
     mysql:
         image: 'mysql:8.0'
-        working_dir: /app/api
+        working_dir: /api
         volumes:
-            - '.:/app'
+            - './api:/api'
         environment:
             - MYSQL_ROOT_PASSWORD=root
             - MYSQL_DATABASE=symfony_ingenosya
@@ -31,18 +31,18 @@ services:
         depends_on:
             -   mysql
         image: 'nginx:alpine'
-        working_dir: /app/api
+        working_dir: /api
         volumes:
-            - '.:/app/api'
+            - './api:/api'
             - './docker-infra/nginx/nginx-api.conf:/etc/nginx/conf.d/default.conf'
         ports:
             - '4641:80'
 
     api-php-fpm:
         build: docker-infra/php-fpm
-        working_dir: /app/api
+        working_dir: /api
         volumes:
-            - '.:/app/api'
+            - './api:/api'
             - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/fpm/conf.d/99-overrides.ini'
             - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/cli/conf.d/99-overrides.ini'
         environment:
@@ -52,18 +52,18 @@ services:
         depends_on:
             -   mysql
         image: 'nginx:alpine'
-        working_dir: /app/front
+        working_dir: /front
         volumes:
-            - '.:/app/front'
+            - './front:/front'
             - './docker-infra/nginx/nginx-front.conf:/etc/nginx/conf.d/default.conf'
         ports:
             - '4642:80'
 
     front-php-fpm:
         build: docker-infra/php-fpm
-        working_dir: /app/front
+        working_dir: /front
         volumes:
-            - '.:/app/front'
+            - './front:/front'
             - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/fpm/conf.d/99-overrides.ini'
             - './docker-infra/php-fpm/php-ini-overrides.ini:/etc/php/8.0/cli/conf.d/99-overrides.ini'
         environment:
