--- a/docker-infra/nginx/nginx-api.conf
+++ b/docker-infra/nginx/nginx-api.conf
@@ -6,7 +6,7 @@ server {
 
     access_log /var/log/nginx/application.access.log;
 
-    root /app/api/api/public;
+    root /api/public;
     index index.php;
 
     # try to serve file directly, fallback to index.php
