--- a/docker-infra/nginx/nginx-front.conf
+++ b/docker-infra/nginx/nginx-front.conf
@@ -6,7 +6,7 @@ server {
 
     access_log /var/log/nginx/application-front.access.log;
 
-    root /app/front/front/public;
+    root /front/public;
     index index.php;
 
     # try to serve file directly, fallback to index.php
